--- a/public/static/jTinder.css
+++ b/public/static/jTinder.css
@@ -5,20 +5,19 @@ html, body {
     position: relative;
 }
 
-body {
-    overflow: hidden;
-}
-
 /* Wrapper with padding */
 .wrap  {
-    height: 300px;
     padding: 5%;
+    padding-bottom: 25%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #tinderslide {
     position: relative;
     background: #fff;
-    width: 95%;
+    width: 100%;
     height: 100%;
 }
 
@@ -38,15 +37,15 @@ body {
     top: 0;
     z-index: 2;
     left: 0;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+    border-radius: 15px;
     overflow: hidden;
     text-align: center;
     padding: 10px 10px 10px 10px;
-    background: rgb(255, 175, 0);
+    background:white;
     font-size: 24px;
     color: #000;
-    border: 1px solid #fff;
-    border: 1px solid #dfdfdf;
+    /* border: 1px solid #fff; */
+    /* border: 1px solid #dfdfdf; */
     border: 1px solid rgba(96, 96, 96, 0.2);
     -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
     -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
@@ -59,7 +58,7 @@ body {
 
 /* Image text */
 #tinderslide li h2 {
-    color: #fff;
+    color: black;
     font-size: 30px;
     text-align: center;
     position: absolute;
@@ -69,15 +68,6 @@ body {
     text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
 }
 
-/* Image rotation */
-#tinderslide li.pane1 {
-    -webkit-transform: rotate(-1deg);
-    -moz-transform: rotate(-1deg);
-    -o-transform: rotate(-1deg);
-    -ms-transform: rotate(-1deg);
-    transform: rotate(-1deg);
-}
-
  #tinderslide ul > li > p {
      text-align: center;
      font-size: 20px;
@@ -85,19 +75,10 @@ body {
      font-weight: bold;
     }
 
-
-#tinderslide li.pane2 {
-    -webkit-transform: rotate(2deg);
-    -moz-transform: rotate(2deg);
-    -o-transform: rotate(2deg);
-    -ms-transform: rotate(2deg);
-    transform: rotate(2deg);
-}
-
 /* Like & dislike badge images */
 #tinderslide .like,
 #tinderslide .dislike {
-    background: url("./img/liked.png") no-repeat scroll 0 0;
+    background: url("./images/liked.png") no-repeat scroll 0 0;
     opacity: 0;
     height: 80px;
     position: absolute;
@@ -118,7 +99,7 @@ body {
 #tinderslide .dislike {
     right: 45px;
     left: auto;
-    background: url("./img/nope.png") no-repeat scroll 0 0;
+    background: url("./images/nope.png") no-repeat scroll 0 0;
 }
 
 /* Image container */
@@ -158,69 +139,3 @@ body {
     width: 40px;
     height: 80px;
 }
-
-.actions a.dislike i {
-    background: url("./img/dislike_button.png") no-repeat scroll center center;
-}
-
-.actions a.like i {
-    background: url("./img/like_button.png") no-repeat scroll center center;
-}
-
-.actions a {
-    float: left;
-    display: block;
-    background-color: #f7f7f7;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#e7e7e7));
-    background-image: -webkit-linear-gradient(top, #f7f7f7, #e7e7e7);
-    background-image: -moz-linear-gradient(top, #f7f7f7, #e7e7e7);
-    background-image: -ms-linear-gradient(top, #f7f7f7, #e7e7e7);
-    background-image: -o-linear-gradient(top, #f7f7f7, #e7e7e7);
-    color: #a7a7a7;
-    margin: 36px;
-    width: 80px;
-    height: 80px;
-    position: relative;
-    text-align: center;
-    line-height: 144px;
-    border-radius: 50%;
-    outline: none;
-    box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
-}
-
-.actions a:hover{
-  text-decoration: none;
-  color: #555;
-  background: #f5f5f5;
-}
-
-/* jTinder images */
-/* #tinderslide .pane5 .img {
-    background: url("./img/pane/pane5.jpg") no-repeat scroll center center;
-    background-size: cover;
-}
-#tinderslide .pane4 .img {
-    background: url("./img/pane/pane4.jpg") no-repeat scroll center center;
-    background-size: cover;
-}
-#tinderslide .pane3 .img {
-    background: url("./img/pane/pane3.jpg") no-repeat scroll center center;
-    background-size: cover;
-}
-#tinderslide .pane2 .img {
-    background: url("./img/pane/pane2.jpg") no-repeat scroll center center;
-    background-size: cover;
-}
-#tinderslide .pane1 .img {
-    background: url("./img/pane/pane1.jpg") no-repeat scroll center center;
-    background-size: cover;
-} */
-
-/* jTinder status text */
-/* #status {
-    text-align: center;
-    font-size: 18px;
-    font-family: arial;
-    margin-top: 30px;
-    font-weight: bold;
-} */
